# Simple-Cpp-Project

./: .clang-format  CMakeLists.txt  README.md  justfile  main.cpp
apps/example/: CMakeLists.txt
apps/example/include/: foo_bar.hpp
apps/example/src/: foo_bar.cpp  main.cpp
cmake/: dependencies.cmake  setup.cmake
core/include/: Camera.h  Serial.h  Vision.h
core/source/: Camera.cpp  Serial.cpp  Vision.cpp
include/: foo_bar.h
libs/: CMakeLists.txt
libs/bar/: CMakeLists.txt
libs/bar/include/: bar.h  bar.hpp
libs/bar/src/: bar.cpp
libs/foo/: CMakeLists.txt
libs/foo/include/: foo.h  foo.hpp
libs/foo/src/: foo.cpp
modules/include/: FrontCamera.h  OmniCamera.h
modules/source/: FrontCamera.cpp  OmniCamera.cpp
scripts/: update_cpm.sh
src/: foo_bar.cpp  main.cpp
